@@ -31,11 +31,12 @@ static char *cgdb_help_text[] = {
 "    G           -> bottom of file",
 "    /           -> search",
 "    ?           -> reverse search",
-"    .           -> repeat a search ( forward or reverse )",
+"    n           -> next forward search",
+"    N           -> next reverse search",
 "    o           -> open the file dialog",
 "    spacebar    -> Sets a breakpoint at the current line number",
-"    P           -> View the previous source file",
-"    N           -> View the next source file",
+"    b           -> View the previous source file",
+"    f           -> View the next source file",
 "",
 "    Shortcut Commands",
 "    ------------------",
